--- a/BudgetBetter/public/css/templatemo-style.css
+++ b/BudgetBetter/public/css/templatemo-style.css
@@ -614,11 +614,8 @@ a#logo {
   bottom: 0;
   text-align: left;
   padding: 20px;
-  background-color: rgba(250,250,250,0.25);
-  width: 100%;
-  height: 60px;
-  border-top-left-radius: 0px;
-  border-top-right-radius: 0px;
+  background-color:#f0a64c;
+  height: 55px;
   -webkit-transition: all 0.4s ease;
   transition: all 0.4s ease;
 }
