--- a/BudgetBetter/public/css/page_3.css
+++ b/BudgetBetter/public/css/page_3.css
@@ -12,11 +12,17 @@ background: linear-gradient(to right, #F9D423, #e65c00);
 
 }
 
-.center {
-    font-size: xx-large;
-    color: white;
-    position: absolute;
-    top: 40%;
-    left: 15%;
-    margin-top: -25px; 
+
+button {
+  display: inline-block;
+}
+
+
+.center{
+	font-size: xx-large;
+	color: white;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
